minor fix for infopopover on small screens

--- a/src/features/amUI/common/AccessPackageInfoPopover/AccessPackageInfoPopover.module.css
+++ b/src/features/amUI/common/AccessPackageInfoPopover/AccessPackageInfoPopover.module.css
@@ -11,6 +11,6 @@
 
 @media (max-width: 768px) {
   .popover {
-    min-width: auto;
+    min-width: 90%;
   }
 }
